Cleaned up view model for collection view

--- a/APIconizer/Classes/Views/GeneratedImageCollectionViewItem.xib
+++ b/APIconizer/Classes/Views/GeneratedImageCollectionViewItem.xib
@@ -34,7 +34,7 @@
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="vHS-pi-rHS"/>
                                 </constraints>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" drawsBackground="YES" id="LEJ-dB-dpq">
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Label" drawsBackground="YES" id="LEJ-dB-dpq">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" red="0.098039215690000001" green="0.81960784310000001" blue="0.76470588240000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="backgroundColor" red="0.062745098040000002" green="0.12549019610000001" blue="0.41176470590000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
