--- a/APIconizer/Classes/Views/GeneratedImageCollectionViewItem.xib
+++ b/APIconizer/Classes/Views/GeneratedImageCollectionViewItem.xib
@@ -11,9 +11,9 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="GeneratedImageCollectionViewItem" customModule="APIconizer" customModuleProvider="target">
             <connections>
-                <outlet property="nonRetinaImageView" destination="BZc-2L-WWw" id="GyU-Pt-Acq"/>
-                <outlet property="retinaHDImageView" destination="L3D-wN-CQY" id="DUt-6n-4sS"/>
-                <outlet property="retinaImageView" destination="osa-Da-o7A" id="FuY-hb-TaA"/>
+                <outlet property="nonRetinaImageView" destination="Vh9-9m-yul" id="Oi7-AU-3Pu"/>
+                <outlet property="retinaHDImageView" destination="3hS-N5-osq" id="DEy-eA-tpQ"/>
+                <outlet property="retinaImageView" destination="MT9-Id-tfA" id="tN9-vj-Ubs"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
         </customObject>
@@ -57,32 +57,14 @@
                                     <stackView distribution="fill" orientation="vertical" alignment="centerX" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="W8k-jZ-MuU">
                                         <rect key="frame" x="0.0" y="0.0" width="30" height="55"/>
                                         <subviews>
-                                            <box boxType="custom" cornerRadius="5" title="Box" translatesAutoresizingMaskIntoConstraints="NO" id="yWx-Ep-QS6">
-                                                <rect key="frame" x="0.0" y="25" width="30" height="30"/>
-                                                <view key="contentView" id="myQ-II-awh">
-                                                    <rect key="frame" x="1" y="1" width="28" height="28"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                    <subviews>
-                                                        <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BZc-2L-WWw">
-                                                            <rect key="frame" x="1" y="1" width="25" height="25"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" secondItem="BZc-2L-WWw" secondAttribute="height" multiplier="1:1" id="V3y-7w-Q88"/>
-                                                                <constraint firstAttribute="height" constant="25" id="rjm-aa-L6b"/>
-                                                            </constraints>
-                                                            <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageAlignment="left" id="ZZn-kO-nMk"/>
-                                                        </imageView>
-                                                    </subviews>
-                                                    <constraints>
-                                                        <constraint firstItem="BZc-2L-WWw" firstAttribute="centerX" secondItem="myQ-II-awh" secondAttribute="centerX" id="3na-df-tVS"/>
-                                                        <constraint firstItem="BZc-2L-WWw" firstAttribute="centerY" secondItem="myQ-II-awh" secondAttribute="centerY" id="mfs-iK-0ko"/>
-                                                    </constraints>
-                                                </view>
+                                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vh9-9m-yul">
+                                                <rect key="frame" x="-3" y="22" width="36" height="36"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="30" id="Pmb-9c-TaG"/>
-                                                    <constraint firstAttribute="width" constant="30" id="zAT-AM-F2h"/>
+                                                    <constraint firstAttribute="height" constant="30" id="F9C-Ki-zA5"/>
+                                                    <constraint firstAttribute="width" secondItem="Vh9-9m-yul" secondAttribute="height" multiplier="1:1" id="VJM-oc-ygm"/>
                                                 </constraints>
-                                                <color key="borderColor" white="0.0" alpha="0.15365261130136981" colorSpace="calibratedWhite"/>
-                                            </box>
+                                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" imageFrameStyle="grayBezel" id="JGy-rP-Pyu"/>
+                                            </imageView>
                                             <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="CKg-ka-GzM">
                                                 <rect key="frame" x="4.5" y="0.0" width="21" height="17"/>
                                                 <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="1x" id="uNW-ml-P8M">
@@ -104,32 +86,14 @@
                                     <stackView distribution="fill" orientation="vertical" alignment="centerX" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nmz-NX-DMa">
                                         <rect key="frame" x="152.5" y="0.0" width="55" height="80"/>
                                         <subviews>
-                                            <box boxType="custom" cornerRadius="10" title="Box" translatesAutoresizingMaskIntoConstraints="NO" id="9bY-ac-uoB">
-                                                <rect key="frame" x="0.0" y="25" width="55" height="55"/>
-                                                <view key="contentView" id="Mck-oq-UvE">
-                                                    <rect key="frame" x="1" y="1" width="53" height="53"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                    <subviews>
-                                                        <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="osa-Da-o7A">
-                                                            <rect key="frame" x="1" y="1" width="50" height="50"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" secondItem="osa-Da-o7A" secondAttribute="height" multiplier="1:1" id="0nw-Ac-Xie"/>
-                                                                <constraint firstAttribute="height" constant="50" id="f3o-5x-MNW"/>
-                                                            </constraints>
-                                                            <imageCell key="cell" refusesFirstResponder="YES" alignment="left" id="QlY-6R-7OQ"/>
-                                                        </imageView>
-                                                    </subviews>
-                                                    <constraints>
-                                                        <constraint firstItem="osa-Da-o7A" firstAttribute="centerX" secondItem="Mck-oq-UvE" secondAttribute="centerX" id="eiD-Dz-jiO"/>
-                                                        <constraint firstItem="osa-Da-o7A" firstAttribute="centerY" secondItem="Mck-oq-UvE" secondAttribute="centerY" id="euA-su-2bG"/>
-                                                    </constraints>
-                                                </view>
+                                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MT9-Id-tfA">
+                                                <rect key="frame" x="-3" y="22" width="61" height="61"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="55" id="OfN-ZZ-yPR"/>
-                                                    <constraint firstAttribute="height" constant="55" id="cKi-th-HjX"/>
+                                                    <constraint firstAttribute="width" secondItem="MT9-Id-tfA" secondAttribute="height" multiplier="1:1" id="ft5-2L-zwt"/>
+                                                    <constraint firstAttribute="height" constant="55" id="lZB-zS-yWw"/>
                                                 </constraints>
-                                                <color key="borderColor" white="0.0" alpha="0.15365261130136981" colorSpace="calibratedWhite"/>
-                                            </box>
+                                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" imageFrameStyle="grayBezel" id="Lek-Ln-bLa"/>
+                                            </imageView>
                                             <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="kX0-LA-N45">
                                                 <rect key="frame" x="16" y="0.0" width="23" height="17"/>
                                                 <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="2x" id="v5r-Ww-3Qg">
@@ -151,39 +115,14 @@
                                     <stackView distribution="fill" orientation="vertical" alignment="centerX" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WbD-yq-77A">
                                         <rect key="frame" x="305" y="0.0" width="80" height="104"/>
                                         <subviews>
-                                            <box boxType="custom" borderType="line" cornerRadius="14" title="Box" translatesAutoresizingMaskIntoConstraints="NO" id="6jf-91-RLS">
-                                                <rect key="frame" x="0.0" y="24" width="80" height="80"/>
-                                                <view key="contentView" id="Qps-RW-9MZ">
-                                                    <rect key="frame" x="1" y="1" width="78" height="78"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                    <subviews>
-                                                        <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L3D-wN-CQY">
-                                                            <rect key="frame" x="1" y="2" width="75" height="75"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" secondItem="L3D-wN-CQY" secondAttribute="height" multiplier="1:1" id="hbw-kd-N7c"/>
-                                                                <constraint firstAttribute="height" constant="75" id="sy0-GH-MV3"/>
-                                                            </constraints>
-                                                            <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageAlignment="right" id="rk4-kc-vBH"/>
-                                                            <userDefinedRuntimeAttributes>
-                                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                                    <integer key="value" value="9"/>
-                                                                </userDefinedRuntimeAttribute>
-                                                                <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
-                                                                <userDefinedRuntimeAttribute type="boolean" keyPath="wantsLayer" value="YES"/>
-                                                            </userDefinedRuntimeAttributes>
-                                                        </imageView>
-                                                    </subviews>
-                                                    <constraints>
-                                                        <constraint firstItem="L3D-wN-CQY" firstAttribute="centerX" secondItem="Qps-RW-9MZ" secondAttribute="centerX" id="MnE-BT-LEm"/>
-                                                        <constraint firstItem="L3D-wN-CQY" firstAttribute="centerY" secondItem="Qps-RW-9MZ" secondAttribute="centerY" id="dAc-4c-4PE"/>
-                                                    </constraints>
-                                                </view>
+                                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3hS-N5-osq">
+                                                <rect key="frame" x="-3" y="21" width="86" height="86"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" secondItem="6jf-91-RLS" secondAttribute="height" multiplier="1:1" id="bQn-8G-uVc"/>
-                                                    <constraint firstAttribute="height" constant="80" id="wo8-lI-raB"/>
+                                                    <constraint firstAttribute="width" secondItem="3hS-N5-osq" secondAttribute="height" multiplier="1:1" id="kHw-dT-KBO"/>
+                                                    <constraint firstAttribute="height" constant="80" id="rJC-o1-lhS"/>
                                                 </constraints>
-                                                <color key="borderColor" white="0.0" alpha="0.15365261130136981" colorSpace="calibratedWhite"/>
-                                            </box>
+                                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" imageFrameStyle="grayBezel" id="7zV-tq-kQc"/>
+                                            </imageView>
                                             <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="Ksh-Ra-t5l">
                                                 <rect key="frame" x="28.5" y="0.0" width="23" height="16"/>
                                                 <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="3x" id="la7-vV-oFt">
@@ -231,7 +170,7 @@
                         </constraints>
                     </view>
                     <color key="borderColor" red="0.062745098040000002" green="0.12549019610000001" blue="0.41176470590000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <color key="fillColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="fillColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
                 </box>
             </subviews>
             <constraints>
@@ -244,12 +183,12 @@
         </customView>
         <customObject id="5rV-d6-YTg" customClass="GeneratedImageCollectionViewItem" customModule="APIconizer" customModuleProvider="target">
             <connections>
-                <outlet property="nonRetinaImageView" destination="BZc-2L-WWw" id="LZj-Pn-L5k"/>
+                <outlet property="nonRetinaImageView" destination="Vh9-9m-yul" id="Wg9-cE-lvw"/>
                 <outlet property="nonRetinaStackview" destination="W8k-jZ-MuU" id="mzp-6c-pK8"/>
                 <outlet property="pointSizeLabel" destination="ckC-S0-pnA" id="CKf-ao-cpt"/>
-                <outlet property="retinaHDImageView" destination="L3D-wN-CQY" id="tof-oo-3QO"/>
+                <outlet property="retinaHDImageView" destination="3hS-N5-osq" id="udy-kr-V7Z"/>
                 <outlet property="retinaHDStackView" destination="WbD-yq-77A" id="vvR-4l-ixj"/>
-                <outlet property="retinaImageView" destination="osa-Da-o7A" id="L2e-Q2-zO5"/>
+                <outlet property="retinaImageView" destination="MT9-Id-tfA" id="aK2-4E-A4b"/>
                 <outlet property="retinaStackView" destination="nmz-NX-DMa" id="NnH-h6-Ixc"/>
                 <outlet property="titleLabel" destination="0sZ-tq-GuG" id="ZWc-Cv-7OX"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="2zQ-me-1Cq"/>
